--- a/TournamentUI/TournamentUI.csproj
+++ b/TournamentUI/TournamentUI.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateTeam.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateTeam.Designer.cs">
+      <DependentUpon>CreateTeam.cs</DependentUpon>
+    </Compile>
     <Compile Include="CreateTournament.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +66,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CreateTeam.resx">
+      <DependentUpon>CreateTeam.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CreateTournament.resx">
       <DependentUpon>CreateTournament.cs</DependentUpon>
     </EmbeddedResource>
