database connection finally works

--- a/TournamentUI/App.config
+++ b/TournamentUI/App.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="Tournaments" connectionString="Server.\sql2019;Database=Tournaments;Trusted_connection=True;" providerName="System.Data.SqlClient"/>
+		<add name="Tournaments" connectionString="Server=LAPTOP-O37I2HKF;Database=Tournaments;Trusted_Connection=True;" 
+			 providerName="System.Data.SqlClient"/>
 	</connectionStrings>
-	<startup> 
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-	</startup>
+		<startup> 
+			<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+		</startup>
 
 </configuration>
