reading and writing to a text file the models.

--- a/TournamentUI/App.config
+++ b/TournamentUI/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<appSettings>
+		<add key="filePath" value ="C:\Users\ProVlad\source\repos\TournamentLibrary\Data"/>
+	</appSettings>
 	<connectionStrings>
 		<add name="Tournaments" connectionString="Server=LAPTOP-O37I2HKF;Database=Tournaments;Trusted_Connection=True;" 
 			 providerName="System.Data.SqlClient"/>
