--- a/TournamentLibrary/TournamentLibrary.csproj
+++ b/TournamentLibrary/TournamentLibrary.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+    <PackageReference Include="System.IO" Version="4.3.0" />
     <PackageReference Include="System.IO.Pipelines" Version="4.7.2" />
     
   </ItemGroup>
