Create team and tournament form working

--- a/TournamentUI/TournamentUI.csproj
+++ b/TournamentUI/TournamentUI.csproj
@@ -90,6 +90,7 @@
       <DependentUpon>CreateTournament.cs</DependentUpon>
     </Compile>
     <Compile Include="IPrizeReq.cs" />
+    <Compile Include="ITeamReq.cs" />
     <Compile Include="tournamentDashBoard.cs">
       <SubType>Form</SubType>
     </Compile>
